# multilevel-aiget-job-apply

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: __init__.py  main.py
app/agents/: analytics.py  easy_apply.py  email_generator.py  email_sender.py  human_approval.py  job_analyzer.py  job_search.py  recruiter_finder.py  resume_customizer.py
app/api/: routes.py
app/config/: settings.py
app/dashboard/: streamlit_app.py
app/database/: session.py
app/graphs/: supervisor.py
app/llm/: base.py  providers.py
app/memory/: __init__.py  checkpoints.py
app/models/: __init__.py  application.py  approval.py  base.py  email.py  job.py  recruiter.py  resume.py
app/playwright/: __init__.py  browser.py
app/prompts/: email_generation.md  job_analysis.md
app/repositories/: applications.py  jobs.py
app/schemas/: profile.py  workflow.py
app/services/: dedupe.py  easy_apply.py  email_sender.py  job_sources.py  profile_loader.py  resume_customizer.py  resume_loader.py
app/utils/: hashing.py  logging.py
config/: config.yaml
docs/: ARCHITECTURE.md  DEPLOYMENT.md  TESTING.md
scripts/: run_dashboard.ps1
tests/unit/: test_dedupe.py  test_hashing.py  test_resume_loader.py
