[project]
name = "multilevel-aiget-job-apply"
version = "0.1.0"
description = "Production-ready LangGraph job application automation system."
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13.2",
  "aiosqlite>=0.20.0",
  "beautifulsoup4>=4.12.3",
  "cryptography>=42.0.8",
  "email-validator>=2.2.0",
  "fastapi>=0.111.0",
  "greenlet>=3.0.3",
  "httpx>=0.27.0",
  "jinja2>=3.1.4",
  "langchain>=0.2.10",
  "langgraph>=0.2.3",
  "openai>=1.37.0",
  "playwright>=1.45.0",
  "pydantic>=2.8.2",
  "pydantic-settings>=2.3.4",
  "python-dotenv>=1.0.1",
  "python-multipart>=0.0.9",
  "pyyaml>=6.0.1",
  "redis>=5.0.7",
  "sqlalchemy>=2.0.31",
  "streamlit>=1.36.0",
  "structlog>=24.2.0",
  "tenacity>=8.5.0",
  "uvicorn[standard]>=0.30.3"
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10.1",
  "pytest>=8.2.2",
  "pytest-asyncio>=0.23.7",
  "ruff>=0.5.5"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
